--- a/style.css
+++ b/style.css
@@ -41,7 +41,6 @@ main {
     height: auto;
     margin-top: 20px;
     text-align: center;
-    margin-bottom: 20px; 
 }
 
 .asistencia {
@@ -49,7 +48,7 @@ main {
     font-size: 2rem;
     color: #BC0000;
     text-align: center;
-    margin-top: -320px;
+    margin-top: -345px;
 }
 
 
@@ -60,6 +59,28 @@ main {
 .botonW {
     display: flex;
     justify-content: center;
+}
+
+.marca{ margin-top: 30px;
+    margin-bottom: 20px;
+
+}
+
+.marca a span {
+  color: #000;
+  text-decoration: none; /* también sirve acá */
+}
+
+.marca span:hover {
+  color: purple; /* opcional: cambia al pasar el mouse */
+}
+.mar a:hover {
+  color: purple; /* opcional: cambia al pasar el mouse */
+}
+
+
+.logoInsta {
+    width: 1.3rem;
 }
 
 /* Estilos específicos para pantallas pequeñas (móviles) */
