--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@
     margin: 0;
     padding: 0;
 }
-#bg {
+body {
     background-color: #ffefd3;
+    padding: 0;
 }
 header {
     display: flex;
@@ -25,14 +26,14 @@ main {
 .ubiRio{
     width: 100%;
     height: auto;
-    margin-top: 20px;
+   
     text-align: center; 
     
 }
 .vestimenta{
     width: 100%;
     height: auto;
-    margin-top: 20px;
+    
     text-align: center;
      
 }
